# SDTP

./: .gitignore  CMakeLists.txt  Project5.pro  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  svoip.cpp  svoip.h
cmake/: FindCryptlib.cmake  FindCryptopp.cmake  FindHupnp.cmake  FindJThread.cmake  FindJrtplib.cmake  FindLibvpx.cmake  FindOpus.cmake  macros.cmake
doxygen/: .gitignore  Doxyfile
libs/: CMakeLists.txt
libs/cryptopp/: CMakeLists.txt
libs/jrtplib/: CMakeLists.txt
libs/opus/: CMakeLists.txt  celt_headers.cmake  celt_sources.cmake  opus_headers.cmake  opus_sources.cmake  silk_headers.cmake  silk_sources.cmake
libs/opus/win32/: config.h  genversion.bat
res/: res.qrc  win_icon.rc
res/hupnp/: HUpnp_resource.rc
res/hupnp/lib/qtsoap-2.7-opensource/lib/: QtSolutions_SOAP-2.7.exp  QtSolutions_SOAP-2.7.lib  QtSolutions_SOAP-2.7d.exp  QtSolutions_SOAP-2.7d.lib
src/: CMakeLists.txt  MessengerApp.ui  Project5.pro  abstractapp.cpp  abstractapp.h  abstracthandshake.cpp  abstracthandshake.h  abstractlink.cpp  abstractlink.h  applauncheritem.cpp  applauncheritem.h  appmanager.cpp  appmanager.h  apptypeidenum.h  appuid.cpp  appuid.h  audiobargraph.cpp  audiobargraph.h  basesampler.cpp  basesampler.h  camerasampler.cpp  camerasampler.h  confwizard.cpp  confwizard.h  confwizard.ui  contact.cpp  contact.h  contactactionswidget.cpp  contactactionswidget.h  contactactionswidget.ui  contactdb.cpp  contactdb.h  contactfactory.cpp  contactfactory.h  contactitemwidget.cpp  contactitemwidget.h  contactitemwidget.ui  contactlistwindow.cpp  contactlistwindow.h  contactlistwindow.ui  (+113 more)
src/_unused classes/: basesampler.h  graphview.cpp  graphview.h  handshake.cpp  handshake.h  handshaker.h  message.h  messengerwindow.cpp  messengerwindow.h  packetagent.cpp  packetagent.h  packetassembler.h  qjrtp.h  rootlink.cpp  rootlink.h  soundsampler.cpp  templatedfactory.h  videoencoder.cpp  videoencoder.h  viewfinderwrapper.cpp  viewfinderwrapper.h
src/res/: svoip.rc
